# fiducials

./: .clang-format  .gitignore  .travis.yml  LICENSE  README.md  README_FlatNav.md  raspi_1280x960.yaml
aruco_detect/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
aruco_detect/cfg/: DetectorParams.cfg  fiducials.rviz2.rviz
aruco_detect/include/: helpers.h  map.h
aruco_detect/launch/: aruco_detect.launch  aruco_detect.launch.py
aruco_detect/scripts/: create_markers.py
aruco_detect/src/: aruco_detect.cpp  feature_tracker.cpp  map.cpp  test_board.cpp
aruco_detect/test/: aruco_images.test  aruco_images.test.py  aruco_images_test.cpp  aruco_marker.bag  aruco_marker.bag.off  detect_board.xml  helpers_test.cpp  vertices_test.py
aruco_gazebo/: CMakeLists.txt  README.md  package.xml
aruco_gazebo/launch/: aruco_gazebo.launch
aruco_gazebo/scripts/: aruco.py
fiducial_detect/: CHANGELOG.rst  CMakeLists.txt  README.md  fiducials_nav.rviz  map.yaml  package.xml
fiducial_detect/camera_info/: loki2.yaml  pgr_camera.yaml
fiducial_detect/config/: common_costmap.yaml  dagny_nav.yaml  global_costmap.yaml  local_costmap.yaml
fiducial_detect/config_noscan/: common_costmap.yaml  dagny_nav.yaml  global_costmap.yaml  local_costmap.yaml  local_planner.yaml
fiducial_detect/launch/: fiducial_detect.launch  fiducial_no_odom.launch  fiducial_rviz.launch  fiducials_no_odom.launch  fiducials_pgr_nav.launch  fiducials_raspi_nav.launch  fiducials_ros.launch  loki2_camera.launch  navigation.launch  navigation_noscan.launch  pgr_camera.launch  pgr_pose.launch  raspi_camera.launch  raspi_pose.launch  raspicam.launch  ubiquity_camera.launch  ubiquity_navigation.launch  ubiquity_navigation_ukf.launch  xv_11_laser_pose.launch
fiducial_detect/src/: fiducial_detect.cpp  fiducials_localization.cpp
fiducial_detect/test/: detect_board.xml  fiducial_images.test  fiducial_images_test.cpp  fiducial_transform.test  fiducial_transform_test.cpp  fiducial_vertices.test  fiducial_vertices_test.cpp  vertices_test.py
fiducial_gazebo/: CMakeLists.txt  package.xml
fiducial_gazebo/launch/: empty_world.launch  fiducial_grid_spawn.launch  fiducial_slam_gazebo.launch  fiducial_world.launch  map.txt
fiducial_gazebo/urdf/: aruco_marker.xacro  fiducial_grid_7x7.urdf.xacro  forward_marker.urdf.xacro
fiducial_lib/: Bounding_Box.cpp  CHANGELOG.rst  CMakeLists.txt  CRC.cpp  Camera_Tag.cpp  Demo.cpp  FEC.cpp  Fiducials.cpp  File.cpp  Makefile  Map.cpp  Map_Test.cpp  Memory.cpp  README.md  String.cpp  Tag.cpp  Tags.cpp  freya.launch  freya.urdf  gscam.launch  loki.launch  loki.urdf  package.xml  rviz_notes.txt  test.rviz  ubiquity_sonar.launch
fiducial_lib/calibration/: pg_3_6mm.txt
fiducial_lib/scripts/: create_markers.py
fiducial_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
fiducial_msgs/msg/: Fiducial.msg  FiducialArray.msg  FiducialMapEntryArray.msg  FiducialTransform.msg  FiducialTransformArray.msg
fiducial_msgs/srv/: AddFiducial.srv
fiducial_pose/: CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  README.md  package.xml
fiducial_pose/include/: RPP.h
fiducial_pose/msg/: Fiducial.msg
fiducial_pose/src/: RPP.cpp  calcPose.cpp
fiducial_slam/: CHANGELOG.rst  CMakeLists.txt  README.md  fiducials.rviz  fiducials_slam.py  package.xml  setup.py
fiducial_slam/launch/: aruco_slam.launch  fiducial_pgr_3d.launch  fiducial_pgr_3d_undistort.launch  fiducial_raspi_3d.launch  fiducial_raspi_3d_map.launch  fiducial_rviz.launch  fiducial_rviz.launch.py  fiducial_slam.launch  fiducial_slam.launch.py  fiducial_ubiquity_3d.launch  fiducial_ubiquity_3d_ukf.launch  fiducials_pgr_nav_3d.launch  fiducials_pgr_nav_3d_undistort.launch  fiducials_raspi_3d.launch  fiducials_raspi_3d_map.launch  fiducials_raspi_3d_slam.launch  fiducials_raspi_nav_3d.launch  localization.launch  ukf.launch
fiducial_slam/msg/: FiducialMapEntry.msg
fiducial_slam/nodes/: fiducial_slam.py  fiducial_slam_node.py
fiducial_slam/scripts/: fit_plane.py  init_map.py  move_origin.py  standard_fit.py
fiducial_slam/src/: estimate.cpp  estimator.cpp  fiducial_slam.cpp  fiducial_slam.py  init_amcl.py  map.cpp  move_origin.py  observation.cpp  transform_with_variance.cpp
fiducial_slam/srv/: InitializeMap.srv
fiducial_slam/test/: 111_initial_map.txt  aruco_transforms.bag  aruco_transforms.db3  auto_init_403.test  auto_init_403.test.py  auto_init_403_test.cpp  board_test_transforms.bag  ceiling_test_2.xml  create_map.xml  create_map_aruco.test.py  create_map_aruco.xml  fiducial_board_611.bag  init_map.xml  init_map_aruco.test.py  init_map_aruco.xml  initial_map.txt  initial_map2.txt  localization.test  localization_test.cpp  localization_test.py  localization_test.xml  map.txt  map3.txt  map_test.py  transform_var_test.cpp  transforms.bag  variance.py
fiducials/: .gitignore  Arc.c  Arc.cpp  Arc.h  Bounding_Box.c  Bounding_Box.cpp  Bounding_Box.h  CHANGELOG.rst  CMakeLists.txt  CRC.c  CRC.cpp  CRC.h  CV.c  CV.cpp  CV.h  Camera_Tag.c  Camera_Tag.cpp  Camera_Tag.h  Character.c  Character.cpp  Character.h  Demo.c  Demo.cpp  Double.c  Double.cpp  Double.h  Doxyfile  FC2.c  FC2.cpp  FC2.h  FEC.c  FEC.cpp  Fiducials.c  Fiducials.cpp  Fiducials.h  File.c  File.cpp  File.h  Float.c  Float.cpp  (+56 more)
fiducials/dojo_6mm_6Oct2013/: pg_6mm.txt
fiducials_ros/: CMakeLists.txt  README.md  map.pnm  package.xml
fiducials_ros/config/: common_costmap.yaml  dagny_nav.yaml  global_costmap.yaml  local_costmap.yaml
fiducials_ros/launch/: camera_pose.launch  fiducials_no_odom.launch  fiducials_ros.launch  fiducials_rviz.launch  laser.launch  navigation.launch  uvc_cam.launch  xv_11_laser_pose.launch
fiducials_ros/src/: fiducials_localization.cpp
maps/: jimHouse.txt  (+2 more)
ros_rpp/: CMakeLists.txt  ChangeLog.txt  Makefile  README.md  RobustPlanarPose.cbp  RobustPlanarPose.depend  RobustPlanarPose.layout  calcPose.cpp  demo.cpp  package.xml
ros_rpp/include/: RPP.h
ros_rpp/msg/: FiducialTransform.msg
ros_rpp/src/: calcPose.cpp
stag_detect/: CMakeLists.txt  README.md  package.xml
stag_detect/LICENSES/: LICENSE_STag  LICENSE_STag_ROS
(+147 files in other folders)
