<?xml version="1.0"?>
<package format="2">
  <name>aruco_gazebo</name>
  <version>0.0.0</version>
  <description>The aruco_gazebo package</description>

  <maintainer email="tp@ubiquityrobotics.org">Teodor Janez Podobnik</maintainer>

  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
