<?xml version="1.0"?>
<package format="2">
  <name>aruco_gazebo</name>
  <version>0.0.0</version>
  <description>The aruco_gazebo package</description>

  <maintainer email="tp@ubiquityrobotics.org">Teodor Janez Podobnik</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export>
  </export>
</package>
