<?xml version="1.0"?>
<package format="2">
  <name>fiducial_detect</name>
  <version>0.7.4</version>
  <description>ROS node to detect fiducial markers and determine their pose</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="namniart@gmail.com">Austin Hendrix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>orocos_kdl</depend>
  <depend>fiducial_lib</depend>
  <depend>fiducial_pose</depend>
  <depend>fiducial_msgs</depend>

  <test_depend>rostest</test_depend>
</package>
