<?xml version="1.0"?>
<package format="2">
  <name>fiducial_lib</name>
  <version>0.1.1</version>
  <description>The fiducials package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="wayne@gramlich.net">Wayne Gramlich</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <build_depend>opencv3</build_depend>

</package>
