<?xml version="1.0"?>
<package format="2">
  <name>fiducial_lib</name>
  <version>0.7.0</version>
  <description>Library to detect fiducials in an image stream</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer> 
  <maintainer email="wayne@gramlich.net">Wayne Gramlich</maintainer>

  <license>BSD</license>

  <author email="wayne@gramlich.net">Wayne Gramlich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>opencv3</depend>

</package>
