<?xml version="1.0"?>
<package format="2">
  <name>fiducial_pose</name>
  <version>0.1.3</version>
  <description>ROS node to estimate 3D pose with RosbustPlanarPose</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>opencv3</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
