<?xml version="1.0"?>
<package format="2">
  <name>fiducial_pose</name>
  <version>0.7.2</version>
  <description>Library to estimate 3D pose with RosbustPlanarPose</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>fiducial_msgs</depend>
  <depend>tf</depend>
  <depend>opencv3</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
