<?xml version="1.0"?>
<package format="2">
  <name>fiducial_slam</name>
  <version>0.6.1</version>
  <description>ROS node to build a 3D map of fiducials and estimate robot pose from fiducial transforms</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <author email="jimv@mrjim.com">Jim Vaughan</author>

  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>fiducial_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roscpp</test_depend>
  <test_depend>cv_bridge</test_depend>
  <test_depend>image_transport</test_depend>
 
  <buildtool_depend>catkin</buildtool_depend>

</package>
